--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<title>Assignment 5B</title>
+	<title>Assignment 8B</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -75,10 +76,21 @@
   </div>
   </div>
   </nav>
-  <footer> 
+    
+
+  <footer>
+
+	<ul>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">  
 		<h2>Contact information</h2>
+		<li><i class="glyphicon glyphicon-cloud"></i></li>
+		<li><i class="glyphicon glyphicon-remove"></i></li>
+		<li><i class="glyphicon glyphicon-user"></i></li>
+	</nav>
+	</ul>
+
 	</footer>
-		
+	
   
 	</body>
 </html>
