--- a/contacts.html
+++ b/contacts.html
@@ -13,10 +13,13 @@
 	 </head>
 	<style>
 	h1 {
-	font-size: 60px;
+	font-size: 40px;
 	text-align: center;
 	}
-	
+	footer {
+	font-size: 30px;
+
+	}
  
 
 
@@ -30,9 +33,9 @@
 	<img src="square.png" class="img-fluid" alt="laur" style="max-width:200px; width:100%;">
 	<nav>
 	
-    <h1>Otsikko 1 </h1>
+    <h1>Contacts </h1>
 	<ul>
-	<p>aasfpasfkpoajkfgposjdgiopjsdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
+	<p>aasfpasfkpoajkfgposjdgiopj<br>sdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
 	
 	<li><a href="https://jerojal.github.io/demo1/">Home</a></li>
 	<li><a href="https://jerojal.github.io/second.html/" target="_blank">page 1</a></li>
@@ -77,16 +80,21 @@
   </div>
   </div>
   </nav>
-    
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%;  padding:20px; ">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; padding:20px; ">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; padding:20px;">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; padding:20px;">
 
+</nav>
   <footer>
 
 	<ul>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">  
 		<h2>Contact information</h2>
-		<li><i class="glyphicon glyphicon-cloud"></i></li>
-		<li><i class="glyphicon glyphicon-remove"></i></li>
-		<li><i class="glyphicon glyphicon-user"></i></li>
+		<li><i class="glyphicon glyphicon-cloud"  style="padding:20px;"></i></li>
+		<li><i class="glyphicon glyphicon-remove" style="padding:20px;"></i></li>
+		<li><i class="glyphicon glyphicon-user"   style="padding:20px;"></i></li>
 	</nav>
 	</ul>
 
