--- a/contacts.html
+++ b/contacts.html
@@ -16,11 +16,7 @@
 	font-size: 40px;
 	text-align: center;
 	}
-	footer {
-	font-size: 30px;
-
-	}
- 
+	
 
 
 	</style>
@@ -50,42 +46,37 @@
 <div class="flex-container">
 
   <div class="flex-child magenta">
-		<h2> Otsikko 2 </h2>
-	<p>ajfajspfjapfjwjgiowgiwerioeiorhbioejmrhioesrhjmeriohjmbeiorjhiejmrhriomeoirhjmioerhioejmrhiojmeroiheiorhjmoierhoierihojeiorhjeirjhioejrhioerhiojeiorhjieojr
-	hkjmerioheoirjhoiejrhoijeriohjmeiorhjeiorjhioejrhoij>eriohjeiohjierjhoioafifijkegpokwogowegjmoi>egiwegoioiafalsfkaksflklaskfasklfaöskflaksfölkalsafökalösfklaösfk
-	</p>
-	<h2> Otsikko 3 </h2>
-	<p>ajfajspfjapfjwjgiowgiwerioeiorhbioejmrhioesrhjmeriohjmbeiorjhiejmrhriomeoirhjmioerhioejmrhiojmeroiheiorhjmoierhoierihojeiorhjeirjhioejrhioerhiojeiorhjieojr
-	hkjmerioheoirjhoiejrhoijeriohjmeiorhjeiorjhioejrhoijeriohjeiohjierjhoioafifijkegpokwogowegjmoiwsegiwegoioiafalsfkaksflklaskfasklfaöskflaksfölkalsfökalösfklaösfk
-	</p>
+		
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 		
-		<img class="kuutio" src="square.png" class="img-fluid" alt="laur" style="max-width:350px; width:100%;">
   </div>
-  
+      <img class="Helsinki" src="helsinki.jpg" class="img-fluid" alt="hel" style=" width:600px; ">
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="flex-child green">
-		<h2> Otsikko 4 </h2>
-	<p>ajfajspfjapfjwjgiowgiwerioeiorhbioejmrhioesrhjmeriohjmbeiorjhiejmrhriomeoirhjmioerhioejmrhiojmeroiheiorhjmoierhoierihojeiorhjeirjhioejrhioerhiojeiorhjieojr
-	hkjmerioheoirjhoiejrhoijeriohjmeiorhjeiorjhioejrhoijeriohjeiohjierjhoioafifijkegpokwogowegjmoegiwegoioiafalsfkaksflklaskfasklfaöskflaksfölkalsafökalösfklaösfk
-	ajfajspfjapfjwjgiowgiwerioeiorhbioejmrhioesrhjmeriohjmbeiorjhiejmrhriomeoirhjmioerhioejmrhiojmeroiheiorhjmoierhoierihojeiorhjeirjhioejrhioerhiojeiorhjieojr
-	hkjmerioheoirjhoiejrhoijeriohjmeiorhjeiorjhioejrhoijeriohjeiohjierjhoioafifijkegpokwogowegjmoiwsegiwegoioiafalsfkaksflklaskfasklfaöskflaksfölkalsfökalösfklaösfk
+		<h2> Otsikko</h2>
+	<p>ajfajspfjapfjwjgiowgiwerioeiorhbioejmrhioesrh<p/>
+	<p>jmeriohjmbeiorjjmoierhoierihojeiorhjei<p/>
+	<p>rjhioejrhioerhiojeiorhjieojrsegiweg<p/>
+	<p>oioiafalsfkaksflklaskfasklfaöskflaksfölkalsfökalösfklaösfk
 	</p>
-	<video width="350" height="300" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-	Your browser does not support the video tag.
-	</video>	
+		
   </div>
   </div>
   </nav>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%;  padding:20px; ">
-    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; padding:20px; ">
-    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; padding:20px;">
-    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; padding:20px;">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; max-height:200px;  padding:20px; ">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; max-height:200px;	padding:20px; ">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; max-height:200px;	padding:20px;">
+    <img class="kuutio" src="square.png" class="img-fluid" alt="laur" style=" width:60%; max-height:200px;	padding:20px;">
 
+</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">  
+	<p class= "osoite">Nimi yhteystiedot</p>
+	<p class= "osoite">Nimi yhteystiedot</p>
+	<p class= "osoite">Nimi yhteystiedot</p>
+	<p class= "osoite">Nimi yhteystiedot</p>
 </nav>
   <footer>
 
