--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	<ul>
 	<p>aasfpasfkpoajkfgposjdgiopjsdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
 	
-	<li><a href="https://jerojal.github.io/page1/">page 1</a></li>
-	<li><a href="https://jerojal.github.io/contacts.html/" target="_blank" style="padding:20px;">Contacts</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/page1">page 1</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/contacts" target="_blank" style="padding:20px;">Contacts</a></li>
 	</ul>
 	</nav>
 	</nav>
