--- a/contacts.html
+++ b/contacts.html
@@ -33,8 +33,8 @@
 	<ul>
 	<p>aasfpasfkpoajkfgposjdgiopj<br>sdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
 	
-	<li><a href="https://jerojal.github.io/demo1/">Home</a></li>
-	<li><a href="https://jerojal.github.io/second.html/" target="_blank">page 1</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/index">Home</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/page1">page 1</a></li>
 	</ul>
 	</nav>
 	</nav>
