--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<p>aasfpasfkpoajkfgposjdgiopjsdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
 	
 	<li><a href="https://jerojal.github.io/wframe.html/page1">page 1</a></li>
-	<li><a href="https://jerojal.github.io/wframe.html/contacts" target="_blank" style="padding:20px;">Contacts</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/contacts" style="padding:20px;">Contacts</a></li>
 	</ul>
 	</nav>
 	</nav>
