--- a/page1.html
+++ b/page1.html
@@ -34,7 +34,7 @@
 	<p>aasfpasfkpoajkfgposjdgiopjsdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
 	
 	<li><a href="https://jerojal.github.io/home/index">Home</a></li>
-	<li><a href="https://jerojal.github.io/contacts.html/" target="_blank">Contacts</a></li>
+	<li><a href="https://jerojal.github.io/contacts.html/">Contacts</a></li>
 	</ul>
 	</nav>
 	</nav>
