--- a/page1.html
+++ b/page1.html
@@ -33,8 +33,8 @@
 	<ul>
 	<p>aasfpasfkpoajkfgposjdgiopjsdgjsdojgsiojdgoijsjogdisoigjosdjgsiojdgoisjdoigjs</p>
 	
-	<li><a href="https://jerojal.github.io/home/index">Home</a></li>
-	<li><a href="https://jerojal.github.io/contacts.html/">Contacts</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/index">Home</a></li>
+	<li><a href="https://jerojal.github.io/wframe.html/contacts.html/">Contacts</a></li>
 	</ul>
 	</nav>
 	</nav>
